Hot fix: add Give page and remove Tutor pilot links and K-12 page

--- a/src/app/pages/about-us/about-us.hbs
+++ b/src/app/pages/about-us/about-us.hbs
@@ -5,17 +5,16 @@
         <div class="boxed">
             <h2>About Us</h2>
             <p>
-                OpenStax is a nonprofit based at Rice University, and it’s our mission to
-                improve student access to education. Our first open source college
-                textbook was published in 2012 and has since scaled to more than 20 books used by
-                hundreds of thousands of students across the globe. Our adaptive learning
-                technology, designed to improve learning outcomes through personalized
-                educational paths, is currently being piloted for K-12 and college.
-                The OpenStax mission is made possible through the generous support of
-                philanthropic foundations. Through these partnerships and our alliance
-                with other educational resource companies, OpenStax is breaking down the
-                most common barriers to learning and empowering students and instructors
-                to succeed.
+                OpenStax is a nonprofit based at Rice University, and it’s our mission
+                to improve student access to education. Our first openly licensed college
+                textbook was published in 2012, and our library since scaled to more than
+                20 books for college and AP courses used by hundreds of thousands of
+                students. Our adaptive learning technology, designed to improve learning
+                outcomes through personalized educational paths, is being piloted in
+                college courses across the country. Through our partnerships with
+                philanthropic foundations and our alliance with other educational
+                resource companies, OpenStax is breaking down the most common barriers to
+                learning and empowering students and instructors to succeed.
             </p>
         </div>
     </div>
