--- a/src/app/pages/comp-copy/comp-copy.hbs
+++ b/src/app/pages/comp-copy/comp-copy.hbs
@@ -45,7 +45,7 @@
                 </label>
                 <label>
                     <span>Email address</span>
-                    <input name="email" pattern="[^@]+@([^@\.]+\.)+[^@\.]+" type="text" required />
+                    <input name="email" pattern="[^@]+@([^@\.]+\.)+[^@\.]+" type="email" required />
                 </label>
                 <label>
                     <span>Phone number</span>
