--- a/src/app/pages/contact/contact.hbs
+++ b/src/app/pages/contact/contact.hbs
@@ -28,7 +28,7 @@
                     </div>
                     <div class="labeled-control">
                         Your Email Address
-                        <input name="email" pattern="[^@]+@([^@\.]+\.)+[^@\.]+" type="text" required />
+                        <input name="email" pattern="[^@]+@([^@\.]+\.)+[^@\.]+" type="email" required />
                     </div>
                     <div class="labeled-control">
                         Your Message
