--- a/src/app/pages/faculty-verification/faculty-verification.hbs
+++ b/src/app/pages/faculty-verification/faculty-verification.hbs
@@ -34,7 +34,7 @@
                 </label>
                 <label>
                     <span>Preferred Email</span>
-                    <input name="email" pattern="[^@]+@([^@\.]+\.)+[^@\.]+" type="text" required />
+                    <input name="email" pattern="[^@]+@([^@\.]+\.)+[^@\.]+" type="email" required />
                 </label>
             </div>
 
@@ -61,7 +61,7 @@
                 </label>
                 <label>
                     Official institutional email address
-                    <input name="00NU0000005oVQV" pattern="[^@]+@([^@\.]+\.)+[^@\.]+" type="text" required />
+                    <input name="00NU0000005oVQV" pattern="[^@]+@([^@\.]+\.)+[^@\.]+" type="email" required />
                     <div class="validation-message">
                         Please enter your official school/organizational email address
                         to help us verify your position with your school.
