--- a/src/app/pages/finish-profile/faculty-section/faculty-section.hbs
+++ b/src/app/pages/finish-profile/faculty-section/faculty-section.hbs
@@ -7,7 +7,7 @@
         </label>
         <label>
             <span>Official institutional email address</span>
-            <input name="00NU0000005oVQV"  pattern="[^@]+@([^@\.]+\.)+[^@\.]+" type="text" required />
+            <input name="00NU0000005oVQV"  pattern="[^@]+@([^@\.]+\.)+[^@\.]+" type="email" required />
             <div class="validation-message">
                 Please enter your official school/organizational email address
                 to help us verify your position with your school.
