--- a/src/app/pages/renewal/renewal.hbs
+++ b/src/app/pages/renewal/renewal.hbs
@@ -39,7 +39,7 @@
                 </label>
                 <label>
                     <span>Email address</span>
-                    <input name="email" pattern="[^@]+@([^@\.]+\.)+[^@\.]+" type="text" required />
+                    <input name="email" pattern="[^@]+@([^@\.]+\.)+[^@\.]+" type="email" required />
                 </label>
                 <label>
                     <span>Phone number</span>
@@ -148,7 +148,7 @@
                 </label>
                 <label>
                     <span>Email address</span>
-                    <input name="adoption[hint_email_address]" pattern="[^@]+@([^@\.]+\.)+[^@\.]+" type="text">
+                    <input name="adoption[hint_email_address]" pattern="[^@]+@([^@\.]+\.)+[^@\.]+" type="email">
                 </label>
                 <label>
                     <span>Phone number</span>
