--- a/src/app/pages/adoption/adoption.hbs
+++ b/src/app/pages/adoption/adoption.hbs
@@ -43,7 +43,7 @@
                 </label>
                 <label>
                     <span>Email address</span>
-                    <input name="email" pattern="[^@]+@([^@\.]+\.)+[^@\.]+" type="text" required />
+                    <input name="email" pattern="[^@]+@([^@\.]+\.)+[^@\.]+" type="email" required />
                 </label>
                 <label>
                     <span>Phone number</span>
