Hotfix: add Give Thank You page

--- a/src/app/pages/give/give.hbs
+++ b/src/app/pages/give/give.hbs
@@ -12,7 +12,7 @@
             <div class="amount-boxes">
                 <form method="post" action="https://ebank.rice.edu/C21279_upay/web/index.jsp">
                     <input name="AMT" type="hidden" />
-                    <input name="SUCCESS_LINK" type="hidden" value="http://openstax.org" />
+                    <input name="SUCCESS_LINK" type="hidden" value="{{thankYouUrl}}" />
                     <input type="hidden" name="UPAY_SITE_ID" id="UPAY_SITE_ID" value="8" />
                     <input type="hidden" name="Donation_To" id="Donation_To" value="OpenStax CNX" />
                     <div class="box-row">
