Hotfix: Give page adjustments
Add background image to banner
Change headline and subhead copy
Default to $5 selected
Style buttons 4rem high, not 5.

--- a/src/app/pages/give/give.hbs
+++ b/src/app/pages/give/give.hbs
@@ -1,13 +1,12 @@
 <main id="maincontent">
     <div class="hero">
+        <div class = "background-overlay"></div>
+        <div class="background-image"></div>
         <div class="boxed">
-            <h1>Give to OpenStax</h1>
+            <h1>Help Us Make More Free Books!</h1>
             <p>
-                Your donation helps us create opportunities for students to have access
-                to quality free and low-cost educational materials. With your gift, we
-                can create and revise our free textbooks, finetune our adaptive learning
-                tools, and spread the word to more instructors and students.
-                Your donation changes lives.
+                Like having a textbook for free? Your donation helps us provide access
+                to free textbooks for more students like you.
             </p>
             <div class="amount-boxes">
                 <form method="post" action="https://ebank.rice.edu/C21279_upay/web/index.jsp">
