--- a/src/app/pages/interest/interest.html
+++ b/src/app/pages/interest/interest.html
@@ -61,7 +61,7 @@
             <div class="text-content labeled-inputs row book-info">
 
                 <div class="col">
-                    <label>Which OpenStax College textbook(s) are you interested in adopting?
+                    <label>Which OpenStax textbook(s) are you interested in adopting?
                         <span class="select-instructions">Select at least one.</span>
                         <span class="invalid-message"><br />{model.validationMessage('00NU00000053nzR')}</span>
                         <div skip="true"></div>
@@ -71,14 +71,14 @@
                     </label>
 
                     <label>
-                        <span>Students per semester</span>
+                        <span>How many students do you teach each semester?</span>
                         <span class="invalid-message"><br />{model.validationMessage('00NU00000052VId')}</span>
                         <input name="00NU00000052VId" type="number" min="0" required>
                     </label>
 
                     <label class="question">
-                        Which partners may we share your information with so they may contact you about
-                        additional resources supporting the OpenStax College books?
+                        Which of our partners would you like to give permission to contact you about additional
+                        resources to support our books?
                         <span class="select-instructions">You may select more than one.</span>
                         <span class="invalid-message"><br />{model.validationMessage('00NU00000055spm')}</span>
                         <div skip="true"></div>
@@ -98,7 +98,7 @@
 
                 <div class="col">
 
-                    <label class="question">How did you hear about OpenStax College?
+                    <label class="question">How did you hear about OpenStax?
                         <span class="select-instructions">Select at least one.</span>
                         <span class="invalid-message"><br />{model.validationMessage('00NU00000055spr')}</span>
                         <div skip="true"></div>
@@ -122,7 +122,7 @@
                     </label>
 
                     <label>
-                        Any feedback you'd like to share with us?
+                        Do you have any feedback you'd like to share with us?
                         <textarea cols="50" name="00NU00000056Rls" rows="4"></textarea>
                     </label>
 
