--- a/src/app/pages/renew/renew.html
+++ b/src/app/pages/renew/renew.html
@@ -39,7 +39,7 @@
                     </label>
                     <label>
                         <span>Email address</span>
-                        <input name="email" pattern="[^@]+@([^@\.]+\.)+[^@\.]+" type="text" required>
+                        <input name="email" pattern="[^@]+@([^@\.]+\.)+[^@\.]+" type="email" required>
                     </label>
                 </div>
             </div>
