--- a/src/app/pages/faculty-verification/faculty-verification.html
+++ b/src/app/pages/faculty-verification/faculty-verification.html
@@ -37,7 +37,7 @@
                     </label>
                     <label>
                         Preferred Email <span class="invalid-message">{model.validationMessage('email')}</span>
-                        <input name="email" pattern="[^@]+@([^@\.]+\.)+[^@\.]+" type="text" required>
+                        <input name="email" pattern="[^@]+@([^@\.]+\.)+[^@\.]+" type="email" required>
                     </label>
                 </div>
 
@@ -64,7 +64,7 @@
                     </label>
                     <label>
                         Official institutional email address <span class="invalid-message">{model.validationMessage('00NU0000005oVQV')}</span>
-                        <input name="00NU0000005oVQV" pattern="[^@]+@([^@\.]+\.)+[^@\.]+" type="text" required>
+                        <input name="00NU0000005oVQV" pattern="[^@]+@([^@\.]+\.)+[^@\.]+" type="email" required>
                         <div class="validation-message">
                             Please enter your official school/organizational email address
                             to help us verify your position with your school.
