Hotfix: Interest Form copy

--- a/src/app/pages/interest/interest.hbs
+++ b/src/app/pages/interest/interest.hbs
@@ -1,7 +1,8 @@
 <div class="text-content subhead">
 <h1>Interested in learning more about OpenStax?</h1>
     <p>
-        Fill out the form below, and we’ll send you more information about giving your students access to peer-reviewed college textbooks, free of cost.
+        Fill out the form below, and we’ll send you more information about giving your students
+        access to peer-reviewed college textbooks, free of cost.
     </p>
     <p>Have you already adopted an OpenStax textbook? <a href="/adoption">Let us know!</a></p>
 </div>
@@ -54,7 +55,7 @@
         <div class="text-content labeled-inputs row book-info">
 
             <div class="col">
-                <label>Which OpenStax College textbook(s) are you interested in adopting?
+                <label>OpenStax books you’re interested in adopting:
                     <span class="select-instructions">Select at least one.</span>
                     <select name="00NU00000053nzR" multiple required>
                         {{#each titles}}
@@ -68,13 +69,13 @@
                 </label>
 
                 <label>
-                    <span>Students per semester</span>
+                    <span>How many students do you teach each semester?</span>
                     <input name="00NU00000052VId" type="number" min=0 required>
                 </label>
 
                 <label class="question">
-                    Which partners may we share your information with so they may contact you about
-                    additional resources supporting the OpenStax College books?
+                    Which of our partners would you like to give permission to contact you
+                    about additional resources to support our books?
                     <span class="select-instructions">You may select more than one.</span>
                     <select name="00NU00000055spm" multiple>
                         <option value="Online homework providers">
@@ -92,7 +93,7 @@
 
             <div class="col">
 
-                <label class="question">How did you hear about OpenStax College?
+                <label class="question">How did you hear about OpenStax?
                     <span class="select-instructions">Select at least one.</span>
                     <select name="00NU00000055spr" multiple required>
                         <option value="Web search">Web search</option>
@@ -114,7 +115,7 @@
                 </label>
 
                 <label>
-                    Any feedback you'd like to share with us?
+                    Do you have any feedback you’d like to share with us?
                     <textarea cols="50" name="00NU00000056Rls" rows="4"></textarea>
                 </label>
 
