Remove pattern from email inputs

--- a/src/app/pages/bulk-order/bulk-order.html
+++ b/src/app/pages/bulk-order/bulk-order.html
@@ -33,8 +33,7 @@
                     <label>
                         Email address
                         <span class="invalid-message">{model.validationMessage('from_address')}</span>
-                        <input name="from_address" type="email"
-                         pattern="[^@]+@([^@\.]+\.)+[^@\.]+" required>
+                        <input name="from_address" type="email" required>
                     </label>
                     <label>
                         Country
