--- a/src/app/pages/contact/contact.html
+++ b/src/app/pages/contact/contact.html
@@ -26,7 +26,7 @@
                     </label>
                     <label>
                         Your Email Address
-                        <input name="email" pattern="[^@]+@([^@\.]+\.)+[^@\.]+" type="email" required>
+                        <input name="email" type="email" required>
                     </label>
                     <label>
                         Your Message
