--- a/src/app/pages/adoption/adoption.html
+++ b/src/app/pages/adoption/adoption.html
@@ -47,7 +47,7 @@
                     </label>
                     <label>
                         <span>Email address</span>
-                        <input name="email" pattern="[^@]+@([^@\.]+\.)+[^@\.]+" type="email" required>
+                        <input name="email" type="email" required>
                     </label>
                     <label>
                         <span>Phone number</span>
