--- a/src/app/pages/finish-profile/faculty-section/faculty-section.html
+++ b/src/app/pages/finish-profile/faculty-section/faculty-section.html
@@ -10,7 +10,7 @@
             <label>
                 Official institutional email address
                 <span class="invalid-message">{model.validationMessage('00NU0000005oVQV')}</span>
-                <input name="00NU0000005oVQV"  pattern="[^@]+@([^@\.]+\.)+[^@\.]+" type="email" required>
+                <input name="00NU0000005oVQV"  type="email" required>
                 <div class="validation-message">
                     Please enter your official school/organizational email address
                     to help us verify your position with your school.
