--- a/src/app/pages/finish-profile/finish-profile.html
+++ b/src/app/pages/finish-profile/finish-profile.html
@@ -34,7 +34,7 @@
                     <label>
                         Preferred email address
                         <span class="invalid-message">{model.validationMessage('email')}</span>
-                        <input name="email" pattern="[^@]+@([^@\.]+\.)+[^@\.]+" type="email" required>
+                        <input name="email" type="email" required>
                     </label>
                 </div>
                 <div class="col">
