--- a/src/app/pages/interest/interest.html
+++ b/src/app/pages/interest/interest.html
@@ -44,8 +44,7 @@
                     <label>
                         Email address
                         <span class="invalid-message">{model.validationMessage('email')}</span>
-                        <input name="email" type="email"
-                         pattern="[^@]+@([^@\.]+\.)+[^@\.]+" required>
+                        <input name="email" type="email" required>
                     </label>
                     <label>
                         Phone number
