Fix Bulk Order book list

--- a/src/app/pages/faculty-verification/faculty-verification.html
+++ b/src/app/pages/faculty-verification/faculty-verification.html
@@ -37,7 +37,7 @@
                     </label>
                     <label>
                         Preferred Email <span class="invalid-message">{model.validationMessage('email')}</span>
-                        <input name="email" pattern="[^@]+@([^@\.]+\.)+[^@\.]+" type="email" required>
+                        <input name="email" type="email" required>
                     </label>
                 </div>
 
