--- a/src/app/pages/give/give.hbs
+++ b/src/app/pages/give/give.hbs
@@ -12,8 +12,8 @@
                 <form method="post" action="https://ebank.rice.edu/C21279_upay/web/index.jsp">
                     <input name="AMT" type="hidden" />
                     <input name="SUCCESS_LINK" type="hidden" value="{{thankYouUrl}}" />
-                    <input type="hidden" name="UPAY_SITE_ID" id="UPAY_SITE_ID" value="8" />
-                    <input type="hidden" name="Donation_To" id="Donation_To" value="OpenStax CNX" />
+                    <input type="hidden" name="UPAY_SITE_ID" id="UPAY_SITE_ID" value="106" />
+                    <input type="hidden" name="Donation_To" id="Donation_To" value="OpenStax" />
                     <div class="box-row">
                         {{#each amounts}}
                             <a class="amount" data-value="{{this}}">${{this}}</a>
