Implement Give page

--- a/src/app/pages/confirmation/confirmation.html
+++ b/src/app/pages/confirmation/confirmation.html
@@ -14,7 +14,7 @@
         <img class="strips" src="/images/components/strips.svg" height="10" alt="" role="presentation">
         <div class="text-content labeled-inputs row book-info">
             <div class="text-content add-another">
-                <h2>{model.adoptionQuestion}</h2>
+                <h2 if="model.adoptionQuestion">{model.adoptionQuestion}</h2>
                 <a href="{model.adoptionUrl}" title="{model.adoptionLinkText}" class="btn">{model.adoptionLinkText}</a>
                 <a if="model.subjectLinkText"
                     href="/subjects" title="{model.subjectLinkText}" class="btn btn-secondary">{model.subjectLinkText}</a>
