--- a/src/app/components/shell/header/header.html
+++ b/src/app/components/shell/header/header.html
@@ -8,6 +8,7 @@
             <ul class="nav-menu meta-menu no-bullets" role="menu" aria-label="Meta navigation menu">
                 <li class="nav-menu-item"><a href="/about" role="menuitem">About Us</a></li>
                 <li class="nav-menu-item"><a href="/blog" role="menuitem">Blog</a></li>
+                <li class="nav-menu-item"><a href="/give" role="menuitem">Give</a></li>
                 <li class="nav-menu-item"><a href="/contact" role="menuitem">Contact</a></li>
                 <li class="nav-menu-item"><a href="/support" role="menuitem">Support</a></li>
                 <li class="nav-menu-item login"><a href="{model.login}" data-local="true" role="menuitem">Login<svg width="0" class="chevron" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 18 30"><title>arrow</title><path d="M12,1L26,16,12,31,8,27,18,16,8,5Z" transform="translate(-8 -1)"/></svg></a>
