Add Optimizely and Lucky Orange tracker scripts

--- a/src/app/components/shell/shell.hbs
+++ b/src/app/components/shell/shell.hbs
@@ -1,3 +1,13 @@
 <div id="header"></div>
 <div id="main"></div>
 <div id="footer"></div>
+<script src="https://cdn.optimizely.com/js/7012081263.js"></script>
+<script type='text/javascript'>
+window.__lo_site_id = 63251;
+
+(function() {
+var wa = document.createElement('script'); wa.type = 'text/javascript'; wa.async = true;
+wa.src = 'https://d10lpsik1i8c69.cloudfront.net/w.js';
+var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(wa, s);
+})();
+</script>
