--- a/src/app/pages/give/give.html
+++ b/src/app/pages/give/give.html
@@ -5,19 +5,25 @@
         <div class="boxed">
             <h1>{model.headline}</h1>
             <p>{model.subhead}</p>
-            <div class="amount-boxes">
-                <form method="post" action="https://ebank.rice.edu/C21279_upay/web/index.jsp">
-                    <input name="AMT" type="hidden" value="{model.selectedAmount}"/>
-                    <input name="SUCCESS_LINK" type="hidden" value="{model.thankYouUrl}" />
-                    <input type="hidden" name="UPAY_SITE_ID" id="UPAY_SITE_ID" value="106" />
-                    <input type="hidden" name="Donation_To" id="Donation_To" value="OpenStax" />
-                    <div class="box-row">
-                        <div each="amount in model.amounts" class="{`amount ${model.selectedAmount === +amount ? 'selected' : ''}`}" data-value="{amount}">${amount}</div>
-                        <input type="number" class="{`amount-input ${model.otherAmount === null ? '' : 'selected'}`}" placeholder="Other amount" min="5" value="{model.otherAmount}"/>
-                    </div>
-                    <input class="btn" type="submit" value="donate!" />
-                </form>
-            </div>
+            <if condition="model.amounts">
+                <div class="amount-boxes">
+                    <form method="post" action="https://ebank.rice.edu/C21279_upay/web/index.jsp">
+                        <input name="AMT" type="hidden" value="{model.selectedAmount}"/>
+                        <input name="SUCCESS_LINK" type="hidden" value="{model.thankYouUrl}" />
+                        <input type="hidden" name="UPAY_SITE_ID" id="UPAY_SITE_ID" value="106" />
+                        <input type="hidden" name="Donation_To" id="Donation_To" value="OpenStax" />
+                        <div class="box-row">
+                            <div each="amount in model.amounts" class="{`amount ${model.selectedAmount === +amount ? 'selected' : ''}`}" data-value="{amount}">${amount}</div>
+                            <input type="number" class="{`amount-input ${model.otherAmount === null ? '' : 'selected'}`}" placeholder="Other amount" min="5" value="{model.otherAmount}"/>
+                        </div>
+                        <input class="btn" type="submit" value="donate!" />
+                    </form>
+                </div>
+            <else>
+                <div class="text-content">
+                    <a href="/impact" class="btn btn-gold">See our impact</a>
+                </div>
+            </if>
         </div>
     </div>
     <img class="strips" src="/images/components/strips.svg" height="10" alt="" role="presentation">
