--- a/src/app/pages/give/give.scss
+++ b/src/app/pages/give/give.scss
@@ -32,6 +32,7 @@
 
         h1 {
             color: inherit;
+            line-height: 1;
             margin-bottom: 2.5rem;
         }
 
@@ -168,11 +169,18 @@
         }
     }
 
+    .btn {
+        padding: 2rem;
+    }
+
     .cta {
         background-color: color(orange);
         color: color(neutral-lightest);
         margin-bottom: 7rem;
-        padding: 2rem;
+    }
+
+    .text-content {
+        padding: 8rem 0 15rem;
     }
 
 }
