Hot fix: Use separate call for pending_verification from Salesforce

--- a/src/app/pages/faculty-verification/faculty-verification.hbs
+++ b/src/app/pages/faculty-verification/faculty-verification.hbs
@@ -1,3 +1,8 @@
+<div class="salesforce-down hidden">
+    We’re experiencing technical difficulties, which means you won’t be able to access
+    your account or apply for instructor verification at this time. Thanks for your
+    patience as we work to fix the issue as quickly as possible.
+</div>
 <div class="text-content subhead">
     <h1>Instructor Verification</h1>
     <p>
