Fix Give page and userModel

--- a/src/app/pages/adoption/adoption.html
+++ b/src/app/pages/adoption/adoption.html
@@ -19,7 +19,7 @@
                 <input name="utf8" type="hidden" value="✓">
                 <input type="hidden" name="oid" value="00DU0000000Kwch">
                 <input type="hidden" name="retURL" value="{`${window.location.origin}/confirmation?adoption`}">
-                <input type="hidden" name="lead_source" value="OS Adoption Form">
+                <input type="hidden" name="lead_source" value="Adoption Form">
             </div>
             <p class="instructions">
                 To get started with an OpenStax book, fill out this form and paste the
