--- a/src/app/components/quotes/quote/quote.html
+++ b/src/app/components/quotes/quote/quote.html
@@ -1,6 +1,6 @@
 <template args="model">
     <if condition="model.image.image">
-        <div class="image" style="background-image: url({model.image}){model.height ? `; height: ${model.height}px` : ''}">
+        <div class="image" style="background-image: url({model.image.image}){model.height ? `; height: ${model.height}px` : ''}">
         </div>
     </if>
     <div class="quote {model.colorScheme ? model.colorScheme : ''}">
