--- a/src/app/pages/renew/renew.html
+++ b/src/app/pages/renew/renew.html
@@ -24,21 +24,25 @@
             <div class="labeled-inputs row">
                 <div class="col">
                     <label>
-                        <span>First name</span>
+                        First name
+                        <span class="invalid-message">{model.validationMessage('first_name')}</span>
                         <input name="first_name" type="text" required>
                     </label>
                     <label>
-                        <span>Last name</span>
+                        Last name
+                        <span class="invalid-message">{model.validationMessage('last_name')}</span>
                         <input name="last_name" type="text" required>
                     </label>
                 </div>
                 <div class="col">
                     <label>
-                        <span>School name</span>
+                        School name
+                        <span class="invalid-message">{model.validationMessage('company')}</span>
                         <input name="company" type="text" required>
                     </label>
                     <label>
-                        <span>Email address</span>
+                        Email address
+                        <span class="invalid-message">{model.validationMessage('email')}</span>
                         <input name="email" type="email" required>
                     </label>
                 </div>
@@ -49,7 +53,9 @@
             <img class="strips" src="/images/components/strips.svg" height="10" alt="" role="presentation">
             <div class="text-content labeled-inputs row book-info">
                 <div id="primary-book" class="col">
-                    <label>Your OpenStax book:
+                    <label>
+                        Your OpenStax book:
+                        <span class="invalid-message">{model.validationMessage('00NU00000053nzR')}</span>
                         <div skip="true"></div>
                         <select name="00NU00000053nzR" required>
                             <!-- FIX: Manipulate model data to avoid multiple loops -->
@@ -62,7 +68,9 @@
                         Don't see your book? Fill out our <a href="/interest">interest form</a>.
                     </p>
 
-                    <label>How are you using this book? <small><i>(optional)</i></small>
+                    <label>
+                        How are you using this book? <small><i>(optional)</i></small>
+                        <span class="invalid-message">{model.validationMessage('00NU00000055spw')}</span>
                         <div skip="true"></div>
                         <select name="00NU00000055spw">
                             <option each="key in model.salesforce" value="{key.value}">{key.text}</option>
@@ -71,10 +79,13 @@
 
                     <label>
                         How many students are using this book in your courses each semester?
+                        <span class="invalid-message">{model.validationMessage('00NU00000052VId')}</span>
                         <input name="00NU00000052VId" type="number" min="0" required>
                     </label>
 
-                    <label>Which partner resources are you using with your book?
+                    <label>
+                        Which partner resources are you using with your book?
+                        <span class="invalid-message">{model.validationMessage('00NU0000005VmTu')}</span>
                         <div skip="true"></div>
                         <select multiple name="00NU0000005VmTu">
                             <option each="partner in model.partners" value="{partner}">{partner}</option>
@@ -82,13 +93,16 @@
                         </select>
                     </label>
 
-                    <label id="other-partner">Other
+                    <label id="other-partner">
+                        Other
+                        <span class="invalid-message">{model.validationMessage('00NU0000005Vls8')}</span>
                         <input name="00NU0000005Vls8" class="short" type="text"
                         placeholder="Partner resources not listed above?">
                     </label>
 
                     <label class="question">
                         Which of our partners would you like to give permission to contact you about additional resources to support our books?
+                        <span class="invalid-message">{model.validationMessage('00NU00000055spm')}</span>
                         <div skip="true"></div>
                         <select multiple name="00NU00000055spm">
                             <option value="Online homework partners">Online homework partners</option>
@@ -102,6 +116,7 @@
                     <label class="question">
                         Are you interested in having your OpenStax experience featured
                         on our website, social media, and/or emails?
+                        <span class="invalid-message">{model.validationMessage('00NU00000055sq6')}</span>
                         <div skip="true"></div>
                         <select name="00NU00000055sq6">
                             <option value="1">Yes</option>
@@ -112,6 +127,7 @@
                     <label class="question">
                         May we contact you about opportunities to participate in future
                         pilots or research studies?
+                        <span class="invalid-message">{model.validationMessage('00NU00000055sqB')}</span>
                         <div skip="true"></div>
                         <select name="00NU00000055sqB">
                             <option value="1">Yes</option>
@@ -119,9 +135,9 @@
                         </select>
                     </label>
 
-
                     <label>
                         Do you have any feedback you'd like to share? <small><i>(optional)</i></small>
+                        <span class="invalid-message">{model.validationMessage('00NU00000056Rls')}</span>
                         <textarea cols="50" name="00NU00000056Rls" rows="10"></textarea>
                     </label>
 
