--- a/src/app/pages/give/give.scss
+++ b/src/app/pages/give/give.scss
@@ -3,6 +3,8 @@
 
 .give-page {
 
+    background-color: rgba(color(neutral-lighter), 0.2);
+
     .btn-orange {
         background-color: color(orange);
     }
