--- a/src/styles/components/forms.scss
+++ b/src/styles/components/forms.scss
@@ -149,7 +149,7 @@ form {
     textarea,
     .selected-button {
         appearance: none;
-        border: 0.1rem solid rgba(color(gray) , 0.2);
+        border: 0.1rem solid rgba(color(gray), 0.2);
         border-radius: 0;
         color: color(neutral-dark);
         display: inline-block;
@@ -165,6 +165,11 @@ form {
 
         &:focus {
             border-bottom: solid color(cyan) 0.2rem;
+            outline: 0;
+        }
+
+        &.visited:invalid {
+            border-bottom: solid color(danger) 0.2rem;
             outline: 0;
         }
     }
