--- a/src/app/pages/adoption/adoption.html
+++ b/src/app/pages/adoption/adoption.html
@@ -28,29 +28,35 @@
             <div class="labeled-inputs row top-of-form">
                 <div class="col">
                     <label>
-                        <span>First name</span>
+                        First name
+                        <span class="invalid-message">{model.validationMessage('first_name')}</span>
                         <input name="first_name" type="text" required>
                     </label>
                     <label>
-                        <span>Last name</span>
+                        Last name
+                        <span class="invalid-message">{model.validationMessage('last_name')}</span>
                         <input name="last_name" type="text" required>
                     </label>
                     <label>
-                        <span>School name</span>
+                        School name
+                        <span class="invalid-message">{model.validationMessage('company')}</span>
                         <input name="company" type="text" required>
                     </label>
                 </div>
                 <div class="col">
                     <label>
-                        <span>School url</span>
+                        School url
+                        <span class="invalid-message">{model.validationMessage('URL')}</span>
                         <input name="URL" type="text" required>
                     </label>
                     <label>
-                        <span>Email address</span>
+                        Email address
+                        <span class="invalid-message">{model.validationMessage('email')}</span>
                         <input name="email" type="email" required>
                     </label>
                     <label>
-                        <span>Phone number</span>
+                        Phone number
+                        <span class="invalid-message">{model.validationMessage('phone')}</span>
                         <input name="phone" type="text" required>
                     </label>
                 </div>
@@ -61,7 +67,9 @@
             <img class="strips" src="/images/components/strips.svg" height="10" alt="" role="presentation">
             <div class="text-content labeled-inputs row book-info">
                 <div id="primary-book" class="col">
-                    <label>Your OpenStax book:
+                    <label>
+                        Your OpenStax book:
+                        <span class="invalid-message">{model.validationMessage('00NU00000053nzR')}</span>
                         <div skip="true"></div>
                         <select name="00NU00000053nzR" required>
                             <option each="title in model.titles" value="{title.value}">
@@ -73,7 +81,9 @@
                         Don't see your book? Fill out our <a href="/interest">interest form</a>.
                     </p>
 
-                    <label>How are you using this book?
+                    <label>
+                        How are you using this book?
+                        <span class="invalid-message">{model.validationMessage('00NU00000055spw')}</span>
                         <div skip="true"></div>
                         <select name="00NU00000055spw">
                             <option each="option in model.salesforce.adoption.options" value="{option.value}">{option.text}</option>
@@ -82,11 +92,14 @@
 
                     <label>
                         How many students are using this book in your courses each semester?
+                        <span class="invalid-message">{model.validationMessage('00NU00000052VId')}</span>
                         <input name="00NU00000052VId" type="number" min="0" required>
                     </label>
 
-                    <label>Which partner resources are you using with your book?
+                    <label>
+                        Which partner resources are you using with your book?
                         <span class="select-instructions">You may select more than one.</span>
+                        <span class="invalid-message">{model.validationMessage('00NU0000005VmTu')}</span>
                         <div skip="true"></div>
                         <select multiple name="00NU0000005VmTu">
                             <option each="partner in model.partners" value="{partner}">{partner}</option>
@@ -94,7 +107,9 @@
                         </select>
                     </label>
 
-                    <label id="other-partner">Other
+                    <label id="other-partner">
+                        Other
+                        <span class="invalid-message">{model.validationMessage('00NU0000005Vls8')}</span>
                         <input name="00NU0000005Vls8" class="short" type="text" placeholder="Partner resources not listed above?">
                     </label>
 
@@ -102,6 +117,7 @@
                         If there are other instructors in your department who will also be using this
                         book, approximately how many students in your department will be using this
                         book per semester?
+                        <span class="invalid-message">{model.validationMessage('00NU00000055sq1')}</span>
                         <input name="00NU00000055sq1" type="number" min="0">
                     </label>
                 </div>
@@ -112,6 +128,7 @@
                         permission to contact you about additional resources to support
                         our books?
                         <span class="select-instructions">You may select more than one.</span>
+                        <span class="invalid-message">{model.validationMessage('00NU00000055spm')}</span>
                         <div skip="true"></div>
                         <select multiple name="00NU00000055spm">
                             <option value="Online homework partners">Online homework partners</option>
@@ -120,7 +137,10 @@
                         </select>
                     </label>
 
-                    <label class="question">Are you interested in having your OpenStax experience featured on our website, social media, and/or emails?
+                    <label class="question">
+                        Are you interested in having your OpenStax experience featured on our website,
+                        social media, and/or emails?
+                        <span class="invalid-message">{model.validationMessage('00NU00000055sq6')}</span>
                         <div skip="true"></div>
                         <select name="00NU00000055sq6">
                             <option value="1">Yes</option>
@@ -130,6 +150,7 @@
 
                     <label class="question">
                         May we contact you about opportunities to participate in future pilots or research studies?
+                        <span class="invalid-message">{model.validationMessage('00NU00000055sqB')}</span>
                         <div skip="true"></div>
                         <select name="00NU00000055sqB">
                             <option value="1">Yes</option>
@@ -139,6 +160,7 @@
 
                     <label>
                         Any feedback you'd like to share with us?
+                        <span class="invalid-message">{model.validationMessage('00NU00000056Rls')}</span>
                         <textarea cols="50" name="00NU00000056Rls" rows="10"></textarea>
                     </label>
 
