--- a/src/app/pages/blog/article/article.scss
+++ b/src/app/pages/blog/article/article.scss
@@ -42,7 +42,10 @@
     }
 
     .content {
+        display: flex;
         flex-basis: 100%;
+        flex-direction: column;
+        justify-content: space-between;
     }
 
     .body {
