--- a/src/app/pages/blog/blog.html
+++ b/src/app/pages/blog/blog.html
@@ -1,4 +1,15 @@
-<div class="boxed">
-    <div class="pinned"></div>
-</div>
-<div class="articles"></div>
+<template args="model">
+    <div class="article page" skip="true">
+    </div>
+    <div class="boxed">
+        <div class="pinned" skip="true"></div>
+    </div>
+    <div class="articles">
+        <div class="boxed">
+            <div class="search">
+                <h2>Read more great stories</h2>
+            </div>
+            <div class="container" skip="true"></div>
+        </div>
+    </div>
+</template>
