--- a/src/app/pages/partners/partners.html
+++ b/src/app/pages/partners/partners.html
@@ -9,7 +9,8 @@
         <img class="strips" src="/images/components/strips.svg" height="10" alt="" role="presentation">
         <div id="filter" class="filter">
             <div class="filter-buttons">
-                <div each="button in model.filterButtons" class="filter-button{button === history.state.filter ? ' selected' : ''}">{button}</div>
+                <div each="button in model.filterButtons" class="filter-button{button === history.state.filter ? ' selected' : ''}"
+                data-value="{button}">{button}</div>
             </div>
         </div>
         <div class="container">
